--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+	<form>
+		Enter any positive integer:
+		<input type="text" name="number" placeholder="100">
+		<input type="submit" name="Submit">
+	</form>
 
+	<div class="output">
+	</div>
 
 	<script src="http://code.jquery.com/jquery.min.js" type="text/javascript"></script>
 	<script src="js/app.js" type="text/javascript"></script>
