--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 	<form>
-		Enter any positive integer:
+		Enter any integer from 1 to 100:
 		<input type="text" name="number" placeholder="100">
-		<input type="submit" name="Submit">
+		<input type="submit" value="Submit">
 	</form>
 
 	<div class="output">
